hphp/hack/test/typecheck/functional_anon_fun.php.exp
File "functional_anon_fun.php", line 23, characters 3-16:
The builtin `call_user_func` is deprecated. (Typing[4128])
